fix z-index issue of expire

--- a/scss/components/__reminder-box.scss
+++ b/scss/components/__reminder-box.scss
@@ -80,7 +80,7 @@
         border-radius: 4px;
         transform: translateX(calc(0% + 2rem)) translateY(-50%);
         white-space: nowrap;
-
+        z-index: 1;
         visibility: hidden;
         opacity: 0;
         transition: all 0.5s ease-in;
